# ray-ray

./: *  .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-ray-ray  bazel-testlogs  hello.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  rust.yaml
benches/: matrix.rs
ray-ray-core/: BUILD.bazel
ray-ray-core/include/: tuple.h
ray-ray-core/src/: main.cc
rust/: .gitignore  Cargo.toml
rust/attempt_1/: *  Cargo.toml
rust/attempt_1/benches/: matrix.rs
rust/attempt_1/src/rendering/: canvas.rs  ppm.rs
rust/attempt_1/src/sims/: projectile.rs
rust/ray_ray_a1/src/math/: matrix.rs  tuple.rs
rust/ray_ray_a1/src/rendering/: ppm.rs  rerun.rs
rust/ray_ray_a2/: Cargo.toml
rust/ray_ray_a2/src/: canvas.rs  lib.rs  main.rs  tuples.rs
rust/ray_ray_a2/src/sims/: projectile.rs
rust/ray_ray_a2/valley/: Cargo.toml
see/gen1/: BUILD.bazel
see/gen1/include/: color.h
see/gen1/src/: color.cc
see/gen1/tests/: test_color.cc
simple_cc/: BUILD.bazel
simple_cc/bins/: projectile.cc
simple_cc/src/: tuple.cc
simple_cc/tests/: tuple.cc
snek/gen1/: BUILD.bazel  main.py
snek/gen1/bins/: projectile_ppm.py  projectile_sim.py
snek/gen1/lib/math/: color.py  matrix.py  transformations.py  tuple.py
snek/gen1/lib/rendering/: canvas.py
snek/gen1/lib/sim/: projectile.py
snek/gen1/test/: __init__.py  test_canvas.py  test_color.py  test_matrix.py  test_transform.py  test_tuple.py
snek_notebook/: main.py  pyproject.toml  snek-notebook.ipynb
snek_ray/: BUILD.bazel  main.py
snek_ray/bins/: projectile_ppm.py  projectile_sim.py
snek_ray/lib/math/: color.py  matrix.py  tuple.py
snek_ray/lib/rendering/: canvas.py
snek_ray/lib/sim/: projectile.py
snek_ray/test/: __init__.py  test_canvas.py  test_color.py  test_matrix.py  test_tuple.py
src/: lib.rs  main.rs
src/math/: matrix.rs  mod.rs  point.rs  tuple.rs  vector.rs
src/rendering/: canvas.rs  color.rs  mod.rs  ppm.rs  rerun.rs
src/sims/: projectile.rs
