[package]
name = "ray-ray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
pretty_assertions = "1.4.0"
rerun = "0.15.1"

[[bin]]
name = "sim-projectile"
path = "src/sims/projectile.rs"
