load("@rules_python//python:defs.bzl", "py_library", "py_binary", "py_test")

py_library(
    name = "snek_ray_lib",
    # All py files in the lib directory
    srcs = glob(["lib/**/*.py"]),
    visibility = ["//visibility:public"],
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        ":snek_ray_lib",
    ],
     visibility = ["//visibility:public"],
)

py_binary(
    name = "projectile_sim",
    srcs = ["bins/projectile_sim.py"],
    deps = [
        ":snek_ray_lib",
        "@pypi//matplotlib:pkg",
    ],
    visibility = ["//visibility:public"],
)

py_test(
    name = "snek_ray_tests",
    srcs = glob(["test/**/*.py"]),
    main = "test/__init__.py",
    deps = [
        ":snek_ray_lib",
        "@pypi//pytest:pkg",
    ],
    args = [
        "-v",
        "snek_ray/test/",
    ],
)