[package]
name = "ray-ray_a1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
generic-array = { version = "1.0.0", features = ["zeroize"] }
log = "0.4.21"
ndarray = "0.15.6"
pretty_assertions = "1.4.0"
rerun = "0.15.1"
typenum = "1.17.0"
zeroize = "1.7.0"

[[bin]]
name = "sim-projectile"
path = "src/sims/projectile.rs"

[toolchain]
channel = "nightly"
[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "matrix"
harness = false
