load("@rules_python//python:defs.bzl", "py_library", "py_binary", "py_test")

py_library(
    name = "ray_ray_lib",
    # All py files in the lib directory
    srcs = glob(["lib/**/*.py"]),
    visibility = ["//visibility:public"],
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        ":ray_ray_lib",
    ],
     visibility = ["//visibility:public"],
)

py_binary(
    name = "projectile_sim",
    srcs = ["bins/projectile_sim.py"],
    deps = [
        ":ray_ray_lib",
        "@pypi//matplotlib:pkg",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "projectile_ppm",
    srcs = ["bins/projectile_ppm.py"],
    deps = [
        ":ray_ray_lib",
         "@pypi//matplotlib:pkg",
    ],
    visibility = ["//visibility:public"],
)


py_test(
    name = "ray_ray_tests",
    srcs = glob(["test/**/*.py"]),
    main = "test/__init__.py",
    deps = [
        ":ray_ray_lib",
        "@pypi//pytest:pkg",
    ],
    args = [
        "-v",
        "snek/gen1/test/",
    ],
)